--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.50",
+    "angular-in-memory-web-api": "^0.9.0",
     "angularx-social-login": "^1.2.7",
+    "body-parser": "^1.18.2",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "mysql": "^2.15.0",
     "ng4-social-login": "^1.4.2",
+    "nodemon": "^1.19.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -49,5 +55,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.3.8.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
